# Orynth

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: deliverables_matrix.md  network_research.md  project_reference.md  project_roadmap.md  simulation_guide.md  system_architecture.md  upstream_references.md
docs/adr/: 0001-hybrid-control-stack.md
docs/presentation/: README.md  index.html  theme.css
src/aerolab_simulation/: package.xml  setup.cfg  setup.py
src/aerolab_simulation/aerolab_simulation/: ardupilot_adapter.py  as2_adapter.py  flock_orchestrator.py  formation.py  swarm_api.py  tf_static_bridge.py  vehicle_adapter.py
src/aerolab_simulation/config/: behaviors.yaml  motion_controller.yaml  platform_gz.yaml  state_estimator.yaml  zenoh_router.json5  zenoh_session.json5
src/aerolab_simulation/launch/: drone_bridges_launch.py  drone_stack_launch.py  swarm_bringup_launch.py  swarm_gazebo_launch.py  teleop_launch.py
src/aerolab_simulation/resource/: swarm_config.json
src/aerolab_simulation/scripts/: mission_test.py
src/aerolab_simulation/test/: test_swarm_components.py
